Remove usage of Commons Lang